# local-ai

./: .gitignore  CLAUDE.md  README.md  __main__.py  benchmark.sh  check_imports.py  config.py  key  key.pub  main.py  pinned_versions.txt  pyproject.toml  settings.toml  smoke_test.sh  start_vllm.sh  test_direct.py  test_e2e.sh  test_sysprompt.py
.claude/memory/: INDEX.md
.claude/memory/lessons/: patterns.md
.claude/memory/project/: context.md
.claude/memory/sessions/: 2026-04-28.md  2026-04-30-restructure.md
.claude/memory/user/: profile.md
.claude/memory/workflow/: code_style.md  rules.md
.claude/tasks/: lessons.md  todo.md
.claude/versions/: v1.md  v2.md
agents/: main_agent.py  router.py
logs/traces/: 2026-04-28.jsonl
memory/: INDEX.md  trace.py
memory/lessons/: patterns.md
memory/project/: context.md
memory/sessions/: latest.md
memory/workflow/: rules.md
model_memory/: sink.py  trace.py
models/: client.py  server.sh
tasks/: lessons.md
tests/: conftest.py  test_agent.py  test_client.py  test_integration.py  test_main.py  test_router.py  test_sink.py  test_trace.py
versions/: v1.md
