[project]
name = "agent-poc"
version = "0.1.0"
description = "Phase 1 POC — Phi-3 Mini 4K inference with vLLM, structured tracing, and agent harness"
requires-python = ">=3.10"
dependencies = [
    "vllm>=0.19.0",
    "pydantic>=2.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "dynaconf>=3.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
